<resources>
    <string name="app_name">DreamSpace</string>
    <string name="text_label_3">Settings</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Journal</string>
    <string name="greeting">Good Afternoon</string>
    <string name="home_ready_text">Get ready for sleep:</string>
    <string name="tips">Tips</string>
    <string name="add_dream">+ Add dream</string>
    <string name="search">Search</string>
    <string name="version">Version 0.0.1</string>
    <string name="dreamspace">DreamSpace</string>
    <string name="settings_about">About</string>
    <string name="settings_notification">Notifications</string>
    <string name="default_web_client_id" translatable="false">681977230656-kjui3j960tkoif1g96r9dngbt152ajak.apps.googleusercontent.com</string>
    <string name="signin">Sign in with Google</string>
    <string name="logout">Log Out</string>
    <string name="lang">language</string>
    <string name="lang_settings">Language settings</string>
    <string name="ru">Russian</string>
    <string name="en">English</string>
    <string name="hint_title">Title</string>
    <string name="hint_body">Write your dream here...</string>
    <string name="save_dream">Save dream</string>
    <string name="type_1">Dream</string>
    <string name="type_2">Nightmare</string>
    <string name="user_name">Dreamy</string>
    <string name="me">Designer and Developer:\n Kirill Rykhlov\n Contact with me: rihlov.kirill@gmail.com</string>
    <string name="dream_type">Type of dream:</string>
    <string name="dream_rate">Dream score:</string>
    <string name="evening">Good Evening</string>
    <string name="night">Good Night</string>
    <string name="morning">Good Morning</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="auth_succes">Authentication successful.</string>
    <string name="fill_fields_err">Fill in all the fields!</string>
    <string name="rate_err">Rate your sleep!</string>
    <string name="type_err">Choose the type of sleep!</string>
    <string name="add_dream_succes">Dream has been successfully added!</string>
    <string name="add_dream_error">Error adding sleep</string>
    <string name="google_signin_fail">Google sign in failed</string>
    <string name="enter_name">Enter a name</string>
    <string name="save">Save</string>
    <string name="body2">How to Remember More Dreams\n\nIf you came across this article, you probably already know how important it is to keep a dream journal. If you don’t, and you want to learn more about the benefits of dream journaling, you can read our dedicated article:Why you should remember your dreams\n\nHow to remember your dreams better\n\nSetting and intention\n\nLike a lot of other practices, you need to be well prepared before you start. First, make sure you set a real interest and an intention to explore your dreams. Make sure your sleep environment is prime for a good night\'s rest. Try to have a relaxing evening routine. With good settings and a real intention, it will be quicker and easier to build your dream work practice. \n\nKeep a dream journal\n\nKeeping a dream journal is a proven way to build dream recall. The best way to prevent your dreams from fading away is to write them down immediately when you wake up when they are fresh in your mind. After only a few minutes, most of your dreams will be gone if you don’t make an effort to remember them. It can also happen that you wake up from a dream in the middle of the night. In that case, if you’re motivated enough, it’s important that you write it down. You may be tempted to think that you’ll remember this dream when you wake up, and you’ll write it in the morning. But it’s likely that when morning comes, you’ll have forgotten this dream entirely.\n\nRead this article on How to keep a good dream journal\n\nGet enough sleep\n\nSleep hygiene is important for getting good rest and vivid dreams. Many factors contribute to a good night’s sleep. Check out our other article on Tips For Better Sleep\n\nMorning hours are prime\n\nIn the morning, you should avoid abrupt awakenings: instead of jumping out of bed to switch off your alarm, ideally, you should take a moment to concentrate on what you were dreaming of before you woke up. Then gently get up and promptly write it down in your journal.\n\nIt doesn’t have to be perfect\n\nWhen keeping a dream journal, especially when you start, there will be mornings when you don’t remember anything, or you wake up with just a blurred memory, a vague emotion. It doesn’t matter what it is, write it down anyway. You can simply check a box where you say you didn’t remember anything, or write down some keywords to describe whatever feeling or memory comes to your mind. This way, you keep building the habit of writing in your journal every morning. And even if it’s not much, it’s always better than nothing when you’ll come back to it later.\n\nGo back at what you wrote\n\nThe practice of dream journaling is not just about writing down your dreams. It’s also about reading them again. Every now and then, you should go back and read your previous entries in your journal. If you feel comfortable with it, you can even share your dreams with someone you trust. Saying them out loud or even just reading them again will help you train your dream memory. It may also unveil some other elements you forgot or reveal some insights to understand your dream. Doing this regularly will improve your dream recall, therefore it’s a very good thing to do when you start dream journaling, and you still don’t remember much from your dreams.\n\nFocus on the right things\n\nOf course, when you write down a dream, the story is important. But it’s far from being the only thing to write down. There are some key elements to record to have a better understanding of the dream. First of all, focus on your emotions. How did you feel in that dream? Was it bad or good? What emotions did you experience? There is often more than one emotion — the more you can identify, the better. Pay attention to the elements in the dream: characters, themes, actions, places, etc. What are they? How do you interact with them? Are they familiar or even recurrent in your dreams. Focusing on these elements and writing them down will help you to make the most accurate description of your dream.\n\nExtra tip\n\nIf you’re very motivated, here’s an extra tip to go further.\nOnce you wrote down your dream, you should look for the elements related to your previous day. To do so, you can write a brief summary of your day before going to sleep, and then see which elements came into your dreams. This way it will be easier to understand why some things appear in your dream, and what elements you should focus on.</string>
    <string name="title2">How to Remember More Dreams</string>
    <string name="title1">Wht You Should Remember Your Dreams</string>
</resources>