<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity"
    android:background="@color/background_purple">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/lang_settings"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="33dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <RadioGroup
        android:id="@+id/langGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_button_ru"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ru"
            android:textSize="8pt"
            android:textColor="@color/white"
            app:useMaterialThemeColors="false"
            />

        <RadioButton
            android:id="@+id/radio_button_en"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/en"
            android:textSize="8pt"
            android:textColor="@color/white"
            app:useMaterialThemeColors="false"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>