<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@color/background_purple">

    <Button
        android:id="@+id/save_dream"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/save_dream"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="save"
        />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="33dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_fill0_wght400_grad0_opsz24" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="375dp"
        android:layout_height="69dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:boxStrokeColor= "@color/white"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:textColor="@color/white"
            android:background="@color/textback_purple"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="376dp"
        android:layout_height="388dp"
        android:layout_marginTop="140dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textback_purple"
            android:gravity="start"
            android:hint="@string/hint_body"
            android:inputType="textMultiLine"
            android:lines="20"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:layout_marginTop="532dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true"
        app:selectionRequired="true">

        <Button
            android:id="@+id/button1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/white"
            android:tag="1"/>

        <Button
            android:id="@+id/button2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="2"
            android:textColor="@color/white"
            android:tag="2"/>

        <Button
            android:id="@+id/button3"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="@color/white"
            android:tag="3"/>

        <Button
            android:id="@+id/button4"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="4"
            android:textColor="@color/white"
            android:tag="4"/>

        <Button
            android:id="@+id/button5"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="5"
            android:textColor="@color/white"
            android:tag="5"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbtn_dream"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type_1"
            android:textColor="@color/white"
            android:textSize="8pt"
            android:tag="1"/>

        <RadioButton
            android:id="@+id/rbtn_nightmare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type_2"
            android:textColor="@color/white"
            android:textSize="8pt"
            android:tag="2"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>