<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JournalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025">

            <Button
                android:id="@+id/add_dream2"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="228dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="141dp"
                android:backgroundTint="@color/white"
                android:text="@string/add_dream"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/journal_text"
                android:layout_width="136dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="255dp"
                android:layout_marginBottom="144dp"
                android:text="@string/text_label_2"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
            <!-- NestedScrollingChild goes here (NestedScrollView, RecyclerView, etc.). -->

            <com.google.android.material.appbar.AppBarLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="79dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="57dp"
                android:background="@color/transparent">

                <com.google.android.material.search.SearchBar
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/search" />
            </com.google.android.material.appbar.AppBarLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo_2023_11_11_22_03_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="403dp"
            android:layout_height="465dp"
            android:layout_marginTop="208dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>